# hypermodern-python-tutorial

./: .coverage  .flake8  README.md  coverage.xml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: release-drafter.yml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: hypermodern_python.console.imports  tests.test_console.imports  tests.test_wikipedia.imports
.pytype/pyi/: noxfile.pyi
.pytype/pyi/hypermodern_python/: __init__.pyi  console.pyi  wikipedia.pyi
.pytype/pyi/tests/: test_console.pyi  test_wikipedia.pyi
docs/: conf.py  reference.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/hypermodern_python/: wikipedia.html
src/hypermodern_python/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
