[tool.poetry]
name = "hypermodern-tutorial"
version = "0.1.0"
description = "The hypermodern Python project - walking through tutorial"
authors = ["mattyocode <matthewoliver@live.co.uk>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = ["hypermodern"]
packages = [
    { include = "src/hypermodern_python"},
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-tutorial = "src.hypermodern_python.console:main"