[tool.poetry]
name = "hypermodern-tutorial"
version = "0.1.0"
description = "The hypermodern Python project - walking through tutorial"
authors = ["mattyocode <matthewoliver@live.co.uk>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = ["hypermodern"]
packages = [
    { include = "hypermodern_python", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"
importlib-metadata = "^3.3.0"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {version = "^5.3.1", extras = ["toml"]}
pytest-cov = "^2.10.1"
pytest-mock = "^3.4.0"
flake8 = "^3.8.4"
mypy = "^0.790"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-tutorial = "src.hypermodern_python.console:main"
